--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5028,6 +5028,12 @@ select::-ms-expand { display: none; }
 
 .side-nav .nav li a:active { border-bottom: 1px solid #1bb1a2; }
 
+textarea { display: block; width: 100%; border: 0; padding: 10px 5px; background: white no-repeat; color: black; /*
+* IMPORTANT PART HERE
+*/ /* 2 imgs : 1px gray line (normal state) AND 2px green line (focus state) */ background-image: linear-gradient(to bottom, #1abc9c, #1bb1a2), linear-gradient(to bottom, silver, silver); /* sizes for the 2 images (default state) */ background-size: 0 2px, 100% 1px; /* positions for the 2 images. Change both "50%" to "0%" or "100%" and tri again */ background-position: 50% 100%, 50% 100%; /* animation solely on background-size */ transition: background-size 0.3s cubic-bezier(0.64, 0.09, 0.08, 1); }
+
+textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100% 2px, 100% 1px; outline: none; }
+
 .menu-header { background: #1bb1a2; cursor: pointer; margin: 0; color: #ffffff; font-family: "sans-serif"; text-align: center; text-decoration: none; letter-spacing: 0px; font-size: medium; min-height: 50px; padding-top: 3%; padding: 0; }
 
 .menu-container { background: #f4f7f9; cursor: pointer; margin: 0; min-height: -webkit-fill-available; position: fixed; }
