--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5028,7 +5028,7 @@ select::-ms-expand { display: none; }
 
 .side-nav .nav li a:active { border-bottom: 1px solid #1bb1a2; }
 
-textarea { display: block; width: 100%; border: 0; padding: 10px 5px; background: white no-repeat; color: black; /*
+textarea { display: block; width: 100%; border: 0; padding: 10px 5px; background: white no-repeat; color: black !important; /*
 * IMPORTANT PART HERE
 */ /* 2 imgs : 1px gray line (normal state) AND 2px green line (focus state) */ background-image: linear-gradient(to bottom, #1abc9c, #1bb1a2), linear-gradient(to bottom, silver, silver); /* sizes for the 2 images (default state) */ background-size: 0 2px, 100% 1px; /* positions for the 2 images. Change both "50%" to "0%" or "100%" and tri again */ background-position: 50% 100%, 50% 100%; /* animation solely on background-size */ transition: background-size 0.3s cubic-bezier(0.64, 0.09, 0.08, 1); }
 
@@ -5055,5 +5055,17 @@ body { background: #ffffff; margin: 0; word-spacing: 3px; }
 .slider { width: 400px; height: 1000px; position: fixed; top: 0; right: 0; background: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
 .min-height-slider { min-height: 350px; }
+
+.modal-slider { margin-left: 50%; }
+
+.chat { list-style: none; margin: 0; padding: 0; }
+
+.chat li { margin-left: 5px; margin-bottom: 10px; padding-bottom: 5px; border-bottom: 1px dotted #B3A9A9; }
+
+.chat li.left .chat-body { margin-left: 10px; }
+
+.chat li.right .chat-body { margin-right: 60px; }
+
+.chat li .chat-body p { margin: 0; color: #777777; }
 
 /*# sourceMappingURL=style.css.map */
