--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5034,6 +5034,8 @@ textarea { display: block; width: 100%; border: 0; padding: 10px 5px; background
 
 textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100% 2px, 100% 1px; outline: none; }
 
+.custom-scrollable { max-height: 1000px; overflow-y: scroll; overflow-x: hidden; }
+
 .menu-header { background: #1bb1a2; cursor: pointer; margin: 0; color: #ffffff; font-family: "sans-serif"; text-align: center; text-decoration: none; letter-spacing: 0px; font-size: medium; min-height: 50px; padding-top: 3%; padding: 0; }
 
 .menu-container { background: #f4f7f9; cursor: pointer; margin: 0; min-height: -webkit-fill-available; position: fixed; }
