loader has been fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5044,7 +5044,7 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 
 .pointer { cursor: pointer; }
 
-.loading { position: absolute; left: 50%; top: 50%; z-index: 150; }
+.loading { position: fixed; left: 50%; top: 50%; z-index: 150; }
 
 /** Copyright (c) 2016 Connor Atherton  All animations must live in their own file in the animations directory and be included here.  */
 /** Styles shared by multiple animations */
@@ -5173,30 +5173,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: 0.28s; animation-duration: 1.4s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: -0.04s; animation-duration: 1.04s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: 0.74s; animation-duration: 0.64s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: 0.29s; animation-duration: 1.47s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: 0.58s; animation-duration: 1.1s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.5s; animation-duration: 0.99s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: 0.1s; animation-duration: 0.97s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: 0.64s; animation-duration: 1.15s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: 0.17s; animation-duration: 1.15s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: 0.19s; animation-duration: 0.82s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: 0.77s; animation-duration: 1.56s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: -0.19s; animation-duration: 0.62s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: 0.06s; animation-duration: 1.55s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: 0.53s; animation-duration: 0.92s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.06s; animation-duration: 0.61s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: -0.13s; animation-duration: 1.14s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: 0.47s; animation-duration: 1.05s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: 0.64s; animation-duration: 1.53s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.43s; animation-duration: 1.59s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.34s; animation-duration: 1.3s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.47s; animation-duration: 1.16s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: -0.19s; animation-duration: 0.76s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.53s; animation-duration: 1.09s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.7s; animation-duration: 1.48s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.64s; animation-duration: 1.21s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.68s; animation-duration: 1.41s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.57s; animation-duration: 1.09s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.13s; animation-duration: 1.01s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.76s; animation-duration: 0.99s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: -0.1s; animation-duration: 1.27s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: -0.04s; animation-duration: 1.35s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.6s; animation-duration: 0.68s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.42s; animation-duration: 1.27s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.73s; animation-duration: 0.72s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.31s; animation-duration: 0.66s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.12s; animation-duration: 1.23s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5267,10 +5267,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: -0.03s; animation-duration: 1.26s; }
-.line-scale-party > div:nth-child(2) { animation-delay: 0.26s; animation-duration: 0.91s; }
-.line-scale-party > div:nth-child(3) { animation-delay: -0.16s; animation-duration: 0.82s; }
-.line-scale-party > div:nth-child(4) { animation-delay: 0.31s; animation-duration: 0.89s; }
+.line-scale-party > div:nth-child(1) { animation-delay: 0.73s; animation-duration: 0.32s; }
+.line-scale-party > div:nth-child(2) { animation-delay: 0.53s; animation-duration: 0.53s; }
+.line-scale-party > div:nth-child(3) { animation-delay: 0.03s; animation-duration: 0.69s; }
+.line-scale-party > div:nth-child(4) { animation-delay: -0.03s; animation-duration: 1.09s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
