--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5181,30 +5181,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: 0.05s; animation-duration: 0.8s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: 0.38s; animation-duration: 1.35s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: -0.05s; animation-duration: 0.66s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: 0.71s; animation-duration: 1.18s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: 0.69s; animation-duration: 1.49s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.41s; animation-duration: 1.43s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: 0.24s; animation-duration: 1.01s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: 0.7s; animation-duration: 0.82s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: 0.34s; animation-duration: 1.04s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: -0.12s; animation-duration: 1.28s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: -0.19s; animation-duration: 0.7s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: 0.13s; animation-duration: 0.71s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: 0.16s; animation-duration: 1.2s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: 0.51s; animation-duration: 0.71s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.02s; animation-duration: 1.31s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: 0.42s; animation-duration: 0.91s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: 0.52s; animation-duration: 1.1s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: 0.06s; animation-duration: 1.03s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.61s; animation-duration: 0.89s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.41s; animation-duration: 1.24s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.65s; animation-duration: 0.85s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.71s; animation-duration: 0.96s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.45s; animation-duration: 1.59s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.71s; animation-duration: 0.68s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.47s; animation-duration: 1.24s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.75s; animation-duration: 1.06s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.77s; animation-duration: 0.93s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: -0.19s; animation-duration: 1.34s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.21s; animation-duration: 1.48s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.28s; animation-duration: 1.57s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.76s; animation-duration: 0.62s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.38s; animation-duration: 1.53s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.25s; animation-duration: 1.47s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.25s; animation-duration: 1.5s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.64s; animation-duration: 1.25s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.74s; animation-duration: 1.1s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5275,10 +5275,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: 0.35s; animation-duration: 1.03s; }
-.line-scale-party > div:nth-child(2) { animation-delay: 0.05s; animation-duration: 0.41s; }
-.line-scale-party > div:nth-child(3) { animation-delay: 0.23s; animation-duration: 0.36s; }
-.line-scale-party > div:nth-child(4) { animation-delay: 0.52s; animation-duration: 0.74s; }
+.line-scale-party > div:nth-child(1) { animation-delay: -0.16s; animation-duration: 0.93s; }
+.line-scale-party > div:nth-child(2) { animation-delay: -0.13s; animation-duration: 0.55s; }
+.line-scale-party > div:nth-child(3) { animation-delay: -0.16s; animation-duration: 1.14s; }
+.line-scale-party > div:nth-child(4) { animation-delay: 0.07s; animation-duration: 0.98s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
@@ -5352,7 +5352,7 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 .semi-circle-spin { position: relative; width: 35px; height: 35px; overflow: hidden; }
 .semi-circle-spin > div { position: absolute; border-width: 0px; border-radius: 100%; animation: spin-rotate 0.6s 0s infinite linear; background-image: linear-gradient(transparent 0%, transparent 70%, #1bb1a2 30%, #1bb1a2 100%); width: 100%; height: 100%; }
 
-.menu-header { background: #1bb1a2; cursor: pointer; margin: 0; color: #ffffff; font-family: "sans-serif"; text-align: center; text-decoration: none; letter-spacing: 0px; font-size: medium; min-height: 50px; padding-top: 3%; padding: 0; }
+.menu-header { background: #1bb1a2; cursor: pointer; margin: 0; color: #ffffff; font-family: "Abril Fatface"; text-align: center; text-decoration: none; letter-spacing: 0px; font-size: large; min-height: 50px; padding-top: 3%; padding: 0; }
 
 .menu-container { background: #f4f7f9; cursor: pointer; margin: 0; min-height: -webkit-fill-available; position: fixed; }
 .menu-container a { text-decoration: none !important; color: black; font-size: 13px; }
