--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4926,6 +4926,9 @@ Files inside this folder should contain all styles relating to a reusable compon
 .button-md-verify { background-color: #1bb1a2; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; width: 70px; height: 30px; padding: 0px 0px; }
 .button-md-verify:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
+.button-md-balance { background-color: #1bb1a2; /* Ash */ border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; /* Safari */ transition-duration: 0.4s; width: 200px; height: 30px; padding: 0px 0px; }
+.button-md-balance:hover { color: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
+
 .dropdown { height: 30px; width: 50px; }
 
 ul li ul.dropdown-hover { min-width: 100%; /* Set width of the dropdown */ background: #181717; display: none; position: absolute; z-index: 999; left: 0; }
@@ -5181,30 +5184,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: 0.11s; animation-duration: 0.71s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: 0.42s; animation-duration: 0.91s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: 0.49s; animation-duration: 1.41s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: 0.6s; animation-duration: 1.56s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: -0.16s; animation-duration: 1.15s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.65s; animation-duration: 1.57s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: -0.05s; animation-duration: 1.58s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: 0.66s; animation-duration: 0.87s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: 0.58s; animation-duration: 1.6s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: 0.36s; animation-duration: 1.26s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: 0.55s; animation-duration: 1.57s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: 0.43s; animation-duration: 0.91s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: 0.25s; animation-duration: 0.64s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: -0.04s; animation-duration: 0.98s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.43s; animation-duration: 1.28s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: -0.1s; animation-duration: 1.29s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: 0.69s; animation-duration: 1.37s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: 0.21s; animation-duration: 1.19s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.63s; animation-duration: 1.36s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.19s; animation-duration: 1.16s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.29s; animation-duration: 1.18s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.02s; animation-duration: 1.01s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.21s; animation-duration: 0.81s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: 0s; animation-duration: 1.46s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.26s; animation-duration: 1.33s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.47s; animation-duration: 0.75s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.26s; animation-duration: 0.74s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.41s; animation-duration: 0.94s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.68s; animation-duration: 0.94s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.74s; animation-duration: 1.38s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.1s; animation-duration: 0.82s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.18s; animation-duration: 0.7s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: -0.12s; animation-duration: 1.16s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.49s; animation-duration: 1.31s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: -0.05s; animation-duration: 1.46s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.02s; animation-duration: 0.78s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5275,10 +5278,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: 0.57s; animation-duration: 0.47s; }
-.line-scale-party > div:nth-child(2) { animation-delay: 0.31s; animation-duration: 0.62s; }
-.line-scale-party > div:nth-child(3) { animation-delay: 0.42s; animation-duration: 0.45s; }
-.line-scale-party > div:nth-child(4) { animation-delay: 0.64s; animation-duration: 0.5s; }
+.line-scale-party > div:nth-child(1) { animation-delay: 0.42s; animation-duration: 1.17s; }
+.line-scale-party > div:nth-child(2) { animation-delay: 0.44s; animation-duration: 0.79s; }
+.line-scale-party > div:nth-child(3) { animation-delay: 0.33s; animation-duration: 0.37s; }
+.line-scale-party > div:nth-child(4) { animation-delay: 0.27s; animation-duration: 0.82s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
