--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4931,6 +4931,8 @@ Files inside this folder should contain all styles relating to a reusable compon
 
 .btn-active-til { background-color: #019889; color: #fff; }
 
+.button-md-update { background-color: #1bb1a2; border: none; color: white; padding: 5px 15px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; -webkit-transition-duration: 0.4s; transition-duration: 0.4s; width: 80px; height: 30px; padding: 0px 0px; }
+
 .dropdown { height: 30px; width: 50px; }
 
 ul li ul.dropdown-hover { min-width: 100%; /* Set width of the dropdown */ background: #181717; display: none; position: absolute; z-index: 999; left: 0; }
@@ -5196,30 +5198,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: -0.13s; animation-duration: 1.52s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: 0.5s; animation-duration: 0.87s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: 0.79s; animation-duration: 0.94s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: 0.29s; animation-duration: 1.49s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: 0.5s; animation-duration: 1.34s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.56s; animation-duration: 1.34s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: -0.18s; animation-duration: 0.65s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: 0.28s; animation-duration: 1.16s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: 0.52s; animation-duration: 1.37s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: 0.31s; animation-duration: 0.73s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: 0.37s; animation-duration: 1.1s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: 0.51s; animation-duration: 1.06s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: 0.46s; animation-duration: 1.3s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: -0.19s; animation-duration: 1.31s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.68s; animation-duration: 0.76s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: 0.38s; animation-duration: 1.35s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: -0.12s; animation-duration: 1.43s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: 0.58s; animation-duration: 1.32s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.66s; animation-duration: 0.72s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.55s; animation-duration: 0.96s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: -0.16s; animation-duration: 0.63s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.62s; animation-duration: 1.38s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.56s; animation-duration: 1.05s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.45s; animation-duration: 0.8s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: -0.06s; animation-duration: 0.75s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.6s; animation-duration: 0.85s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.37s; animation-duration: 1.23s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.11s; animation-duration: 0.9s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.6s; animation-duration: 1.6s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.65s; animation-duration: 0.85s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.7s; animation-duration: 0.61s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: -0.19s; animation-duration: 0.87s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.1s; animation-duration: 0.74s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.24s; animation-duration: 1.23s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: -0.07s; animation-duration: 1s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: -0.14s; animation-duration: 1.37s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5290,10 +5292,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: -0.08s; animation-duration: 0.67s; }
-.line-scale-party > div:nth-child(2) { animation-delay: 0.65s; animation-duration: 0.8s; }
-.line-scale-party > div:nth-child(3) { animation-delay: 0.24s; animation-duration: 0.85s; }
-.line-scale-party > div:nth-child(4) { animation-delay: 0.09s; animation-duration: 0.67s; }
+.line-scale-party > div:nth-child(1) { animation-delay: 0.09s; animation-duration: 0.9s; }
+.line-scale-party > div:nth-child(2) { animation-delay: 0.4s; animation-duration: 0.79s; }
+.line-scale-party > div:nth-child(3) { animation-delay: 0.45s; animation-duration: 0.43s; }
+.line-scale-party > div:nth-child(4) { animation-delay: 0.61s; animation-duration: 0.76s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
