--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4993,6 +4993,8 @@ select::-ms-expand { display: none; }
 
 .selected { background-color: #019889; color: #fff; }
 
+.background-nonclickable { pointer-events: none; }
+
 .fa-external-link { color: #1bb1a2; cursor: pointer; }
 
 .fa-window-close, .fa-arrow-left { cursor: pointer; }
@@ -5198,30 +5200,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: 0.31s; animation-duration: 0.73s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: 0.37s; animation-duration: 1.1s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: 0.51s; animation-duration: 1.06s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: 0.46s; animation-duration: 1.3s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: -0.19s; animation-duration: 1.31s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.68s; animation-duration: 0.76s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: 0.38s; animation-duration: 1.35s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: -0.12s; animation-duration: 1.43s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: 0.58s; animation-duration: 1.32s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: 0.29s; animation-duration: 1s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: 0.21s; animation-duration: 0.88s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: 0.7s; animation-duration: 1.02s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: 0.6s; animation-duration: 0.74s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: 0.79s; animation-duration: 1.25s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.72s; animation-duration: 1.33s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: 0.76s; animation-duration: 1.4s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: 0.56s; animation-duration: 0.61s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: -0.04s; animation-duration: 1.31s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: 0.11s; animation-duration: 0.9s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.6s; animation-duration: 1.6s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.65s; animation-duration: 0.85s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.7s; animation-duration: 0.61s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: -0.19s; animation-duration: 0.87s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.1s; animation-duration: 0.74s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.24s; animation-duration: 1.23s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: -0.07s; animation-duration: 1s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: -0.14s; animation-duration: 1.37s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: -0.03s; animation-duration: 1.24s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: -0.03s; animation-duration: 1.58s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.49s; animation-duration: 1.42s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: -0.06s; animation-duration: 0.61s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.32s; animation-duration: 1.37s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.62s; animation-duration: 1.15s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.17s; animation-duration: 0.87s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: -0.13s; animation-duration: 1.2s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.65s; animation-duration: 1.56s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5292,10 +5294,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: 0.09s; animation-duration: 0.9s; }
-.line-scale-party > div:nth-child(2) { animation-delay: 0.4s; animation-duration: 0.79s; }
-.line-scale-party > div:nth-child(3) { animation-delay: 0.45s; animation-duration: 0.43s; }
-.line-scale-party > div:nth-child(4) { animation-delay: 0.61s; animation-duration: 0.76s; }
+.line-scale-party > div:nth-child(1) { animation-delay: 0.22s; animation-duration: 0.54s; }
+.line-scale-party > div:nth-child(2) { animation-delay: 0.32s; animation-duration: 0.84s; }
+.line-scale-party > div:nth-child(3) { animation-delay: 0.73s; animation-duration: 1.01s; }
+.line-scale-party > div:nth-child(4) { animation-delay: 0.27s; animation-duration: 1.23s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
