--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5307,30 +5307,30 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes ball-grid-beat { 50% { opacity: 0.7; }
   100% { opacity: 1; } }
 .ball-grid-beat { width: 57px; }
-.ball-grid-beat > div:nth-child(1) { animation-delay: -0.04s; animation-duration: 0.9s; }
-.ball-grid-beat > div:nth-child(2) { animation-delay: -0.13s; animation-duration: 1.43s; }
-.ball-grid-beat > div:nth-child(3) { animation-delay: 0.44s; animation-duration: 1.57s; }
-.ball-grid-beat > div:nth-child(4) { animation-delay: 0.37s; animation-duration: 1.55s; }
-.ball-grid-beat > div:nth-child(5) { animation-delay: 0.21s; animation-duration: 0.84s; }
-.ball-grid-beat > div:nth-child(6) { animation-delay: 0.35s; animation-duration: 0.98s; }
-.ball-grid-beat > div:nth-child(7) { animation-delay: 0.11s; animation-duration: 1.53s; }
-.ball-grid-beat > div:nth-child(8) { animation-delay: 0.66s; animation-duration: 1.24s; }
-.ball-grid-beat > div:nth-child(9) { animation-delay: -0.05s; animation-duration: 0.83s; }
+.ball-grid-beat > div:nth-child(1) { animation-delay: 0.08s; animation-duration: 1.31s; }
+.ball-grid-beat > div:nth-child(2) { animation-delay: 0.08s; animation-duration: 0.93s; }
+.ball-grid-beat > div:nth-child(3) { animation-delay: 0.64s; animation-duration: 0.97s; }
+.ball-grid-beat > div:nth-child(4) { animation-delay: -0.17s; animation-duration: 0.63s; }
+.ball-grid-beat > div:nth-child(5) { animation-delay: -0.1s; animation-duration: 0.93s; }
+.ball-grid-beat > div:nth-child(6) { animation-delay: 0.56s; animation-duration: 1.49s; }
+.ball-grid-beat > div:nth-child(7) { animation-delay: 0.78s; animation-duration: 0.85s; }
+.ball-grid-beat > div:nth-child(8) { animation-delay: 0.17s; animation-duration: 1.55s; }
+.ball-grid-beat > div:nth-child(9) { animation-delay: 0.59s; animation-duration: 1.56s; }
 .ball-grid-beat > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-beat; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-grid-pulse { 0% { transform: scale(1); }
   50% { transform: scale(0.5); opacity: 0.7; }
   100% { transform: scale(1); opacity: 1; } }
 .ball-grid-pulse { width: 57px; }
-.ball-grid-pulse > div:nth-child(1) { animation-delay: -0.17s; animation-duration: 1.52s; }
-.ball-grid-pulse > div:nth-child(2) { animation-delay: -0.08s; animation-duration: 0.65s; }
-.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.25s; animation-duration: 1.38s; }
-.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.69s; animation-duration: 1.27s; }
-.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.42s; animation-duration: 1.15s; }
-.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.51s; animation-duration: 1.46s; }
-.ball-grid-pulse > div:nth-child(7) { animation-delay: 0.6s; animation-duration: 0.89s; }
-.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.07s; animation-duration: 0.97s; }
-.ball-grid-pulse > div:nth-child(9) { animation-delay: 0s; animation-duration: 1.56s; }
+.ball-grid-pulse > div:nth-child(1) { animation-delay: -0.07s; animation-duration: 1.1s; }
+.ball-grid-pulse > div:nth-child(2) { animation-delay: 0.69s; animation-duration: 0.68s; }
+.ball-grid-pulse > div:nth-child(3) { animation-delay: 0.05s; animation-duration: 1.26s; }
+.ball-grid-pulse > div:nth-child(4) { animation-delay: 0.39s; animation-duration: 0.78s; }
+.ball-grid-pulse > div:nth-child(5) { animation-delay: 0.72s; animation-duration: 1.46s; }
+.ball-grid-pulse > div:nth-child(6) { animation-delay: 0.16s; animation-duration: 0.97s; }
+.ball-grid-pulse > div:nth-child(7) { animation-delay: -0.09s; animation-duration: 1.5s; }
+.ball-grid-pulse > div:nth-child(8) { animation-delay: 0.48s; animation-duration: 1.51s; }
+.ball-grid-pulse > div:nth-child(9) { animation-delay: 0.68s; animation-duration: 0.62s; }
 .ball-grid-pulse > div { background-color: #1bb1a2; width: 15px; height: 15px; border-radius: 100%; margin: 2px; animation-fill-mode: both; display: inline-block; float: left; animation-name: ball-grid-pulse; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes ball-spin-fade-loader { 50% { opacity: 0.3; transform: scale(0.4); }
@@ -5401,10 +5401,10 @@ textarea:focus { /* sizes for the 2 images (focus state) */ background-size: 100
 @keyframes line-scale-party { 0% { transform: scale(1); }
   50% { transform: scale(0.5); }
   100% { transform: scale(1); } }
-.line-scale-party > div:nth-child(1) { animation-delay: 0.56s; animation-duration: 0.58s; }
-.line-scale-party > div:nth-child(2) { animation-delay: 0.35s; animation-duration: 0.94s; }
-.line-scale-party > div:nth-child(3) { animation-delay: 0.79s; animation-duration: 0.6s; }
-.line-scale-party > div:nth-child(4) { animation-delay: 0.09s; animation-duration: 0.86s; }
+.line-scale-party > div:nth-child(1) { animation-delay: 0.23s; animation-duration: 0.77s; }
+.line-scale-party > div:nth-child(2) { animation-delay: 0.39s; animation-duration: 0.7s; }
+.line-scale-party > div:nth-child(3) { animation-delay: 0.17s; animation-duration: 1.01s; }
+.line-scale-party > div:nth-child(4) { animation-delay: 0.21s; animation-duration: 0.44s; }
 .line-scale-party > div { background-color: #1bb1a2; width: 4px; height: 35px; border-radius: 2px; margin: 2px; animation-fill-mode: both; display: inline-block; animation-name: line-scale-party; animation-iteration-count: infinite; animation-delay: 0; }
 
 @keyframes line-scale-pulse-out { 0% { transform: scaley(1); }
@@ -5504,7 +5504,7 @@ body { background: #ffffff; margin: 0; word-spacing: 3px; }
 
 .user-info-block { min-height: 490px; margin-left: 15px; }
 
-.slider { width: 400px; height: 1000px; position: fixed; top: 0; right: 0; background: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
+.slider { width: 400px; height: -webkit-fill-available; position: fixed; top: 0; right: 0; background: white; box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
 .min-height-slider { min-height: 350px; }
 
